fix overflow navbar

--- a/src/components/CustomNavbar.css
+++ b/src/components/CustomNavbar.css
@@ -8,13 +8,15 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  background: linear-gradient(
-    to bottom right,
-    #001f3f,
-    #000000
-  ); /* Diagonal gradient background */
-  border-right: 2px solid #002b56; /* Slightly darker border */
-  z-index: 1000; /* Ensure it stays on top */
+  background: linear-gradient(to bottom right,
+      #001f3f,
+      #000000);
+  /* Diagonal gradient background */
+  border-right: 2px solid #002b56;
+  /* Slightly darker border */
+  z-index: 1000;
+  /* Ensure it stays on top */
+  overflow: scroll;
 }
 
 .custom-navbar .navbar-brand img {
@@ -36,7 +38,8 @@
 }
 
 .custom-navbar .d-flex {
-  width: 100%; /* Ensure the flex container spans the full width */
+  width: 100%;
+  /* Ensure the flex container spans the full width */
 }
 
 .custom-navbar .navbar-nav {
